--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,15 +6,18 @@
 
     <p class="h1"> Nos produits phares</p>
     <div class="row">
-        {% for i in 1..3 %}
+        {% for product in products %}
         <div class="col">
             <div class="card">
-                <img src="https://picsum.photos/200/200" alt="" class="img-fluid">
+                <img src="{{ product.mainPicture }}" alt="" class="img-fluid">
                 <div class="card-body">
-                    <h4 class="card-title">Un super produit</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid amet architecto asperiores
-                        cupiditate, dicta, distinctio et illum itaque necessitatibus nemo nulla odio perspiciatis
-                        praesentium reiciendis, repudiandae tempora ullam unde.</p>
+                    <h4 class="card-title">{{  product.name }} ({{ product.price / 100 }} &euro;)</h4>
+
+                    <span class="badge badge-info">
+                        {{ product.category.name }}
+                    </span>
+
+                    <p class="card-text">{{ product.shortDescription }}</p>
                     <a href="#" class="btn btn-primary btn-sm" >Voir plus</a>
                     <a href="#" class="btn btn-success btn-sm" >Ajouter </a>
                 </div>
