--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,7 +18,7 @@
                     </span>
 
                     <p class="card-text">{{ product.shortDescription }}</p>
-                    <a href="#" class="btn btn-primary btn-sm" >Voir plus</a>
+                    <a href="{{ path('product_show', {'category_slug': product.category.slug,'slug': product.slug }) }}" class="btn btn-primary btn-sm" >Voir plus</a>
                     <a href="#" class="btn btn-success btn-sm" >Ajouter </a>
                 </div>
             </div>
