--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -5,26 +5,30 @@
 {% endblock %}
 
 {% block body %}
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item active">{{ category.name }}</li>
+    </ol>
     <p class="h1">{{ category.name }}</p>
 
-<div class="row">
-    {% for product in category.products %}
-<div class="col-3">
-    <div class="card">
-        <img src="{{ product.mainPicture }}" alt="" class="img-fluid">
-        <div class="card-body">
-            <h4 class="card-title">{{  product.name }} ({{ product.price / 100 }} &euro;)</h4>
+    <div class="row">
+        {% for product in category.products %}
+            <div class="col-3">
+                <div class="card">
+                    <img src="{{ product.mainPicture }}" alt="" class="img-fluid">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ product.name }} ({{ product.price / 100 }} &euro;)</h4>
 
-            <span class="badge badge-info">
+                        <span class="badge badge-info">
                         {{ product.category.name }}
                     </span>
 
-            <p class="card-text">{{ product.shortDescription }}</p>
-            <a href="#" class="btn btn-primary btn-sm" >Voir plus</a>
-            <a href="#" class="btn btn-success btn-sm" >Ajouter </a>
-        </div>
+                        <p class="card-text">{{ product.shortDescription }}</p>
+                        <a href="{{ path('product_show', {'category_slug': product.category.name , 'slug': product.slug}) }}" class="btn btn-primary btn-sm">Voir plus</a>
+                        <a href="#" class="btn btn-success btn-sm">Ajouter </a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
     </div>
-</div>
-    {% endfor %}
-</div>
 {% endblock %}
