--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -16,8 +16,8 @@
         <div class="col">
             <span class="badge badge-primary">{{ product.category.name }}</span>
             <p>{{ product.shortDescription }}</p>
-            <a href="#" class="btn btn-success">
-                <i class="fas fa-shopping-cart">Ajouter au panier</i>
+            <a href="{{ path('cart_add', {'id': product.id }) }}" class="btn btn-success">
+                <i class="fas fa-shopping-cart">  Ajouter au panier</i>
             </a>
         </div>
     </div>
