--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -18,21 +18,24 @@
 {#            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>#}
 {#        </form>#}
         <ul class="navbar-nav">
+            {% if app.user %}
             <li class="nav-item">
-                <a href="#" class="nav-link">
-                    Inscription
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="btn btn-info">
-                    Login
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="btn btn-danger">
+                <a href="{{ path('security_logout') }}" class="btn btn-danger">
                     Logout
                 </a>
             </li>
+            {% else %}
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        Inscription
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{ path('security_login') }}" class="btn btn-info">
+                        Login
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
